nearly done my read-through

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -81,7 +81,7 @@ Link\"{o}ping, Sweden\\
 \begin{floatbox}{}
 % DG : I wonder if a paragraph summarizing the extent of the problem with the salix data should not be provided here. Either within the text, or a box. But we need to convingly show how large is this problem even for such an extensive dataset
 % AC : I like the box idea. Since we refer to the Salix data throughout the manuscript it makes sense to make it stand out. 
-    \indent As a case study, we use an extensively sampled \emph{Salix}-galler-parasitoid meta-network. This dataset consists of a single community type sampled across Europe; willow (\emph{Salix}) species, willow-galling sawflies, and their natural enemies. The data were collected over 29 years at 374 unique locations across Europe, with a total of 641 site visits. Each site visit can be considered as a network in its own right and an independent sample from which to build the meta-network. The meta-network consists of 1,173 different interactions between 52 \emph{Salix} nodes, 92 herbivore nodes, and 126 natural enemy nodes. The high spatiotemporal resolution of this network and the unusually high sampling effort implemented at the site level makes this dataset particularly well suited for illustrating the difficulties in completely sampling a network and testing Bayesian approaches to overcome these difficulties.
+    \indent As a case study, we use an extensively sampled \emph{Salix}-galler-natural enemy meta-network. This dataset consists of a single community type sampled across Europe; willow (\emph{Salix}) species, willow-galling sawflies, and their natural enemies. The data were collected over 29 years at 374 unique locations across Europe, with a total of 641 site visits. Each site visit can be considered as a network in its own right and an independent sample from which to build the meta-network. The meta-network consists of 1,173 different interactions between 52 \emph{Salix} nodes, 92 herbivore nodes, and 126 natural enemy nodes. The high spatiotemporal resolution of this network and the unusually high sampling effort implemented at the site level makes this dataset particularly well suited for illustrating the difficulties in completely sampling a network and testing Bayesian approaches to overcome these difficulties.
     \indent We may begin by comparing the frequency of of co-occurence of taxa to reveal the challenge of having sufficient sampling to be confident that an interaction does not occur. Most pairs of species (3986/4992 \emph{Salix}-galler pairs and  9794/12096 galler-natural enemy pairs) are never found co-occurring, and for species that did occur the number of co-occurrences was generally low (mean=4.24, var=36.3 for \emph{Salix}-galler pairs; mean=3.87, var=28.8 for galler-natural enemy pairs; Fig.~\ref{histograms}A-B). For those species which interacted when co-occurring, the incidence of interaction was also low (mean=12.0, var=155 for \emph{Salix}-galler pairs; mean=4.04, var=29.3 for galler-natural enemy pairs; Fig.~\ref{histograms}C-D). Only 2.82\% of \emph{Salix}-galler pairs and 7.76\% of galler-natural enemy pairs were observed interacting at all. Thus, even in the most extensive data set that we could find, limited sampling is clearly a major source of uncertainty. This dataset also illustrates the potential for increased sampling to not necessarily reveal more interactions as a pair of species that interacts in some cases may not be observed interacting in all cases (Fig.~\ref{histograms}E-F). 
   \caption{\emph{Salix} dataset}
   \label{box1}
@@ -231,7 +231,7 @@ Link\"{o}ping, Sweden\\
 
 %DG: otherwise the difference between the two interaction types is very interesting and useful to show the effect of the priors. Bravo ! 
       \begin{figure}[ht]
-        \caption{Using prior distribution based on the \emph{Salix}-galler and galler-parasitoid networks in~\citet{Barbour2016}, we can calculate posterior distributions for the probability of interaction ($\lambda$) between two species that have not yet been observed interacting. Here we show posterior distributions for each $\lambda$ in each network ranging from the prior distribution ($n=0$ observed co-occurrence) to the distribution obtained when the pair of species has been observed co-occurring 100 times. The distribution narrows and approaches zero as the sample size increases. \textbf{A)} The posterior distributions for the \emph{Salix}-galler component are always wider and farther from zero than those for \textbf{B)} the galler-parasitoid component. This is likely because the prior distribution for the galler-parasitoid component of the network was both narrower and had a mean closer to that in the~\citet{Kopelke2017} data than did the \emph{Salix}-galler component.}
+        \caption{Using prior distribution based on the \emph{Salix}-galler and galler-natural enemy networks in~\citet{Barbour2016}, we can calculate posterior distributions for the probability of interaction ($\lambda$) between two species that have not yet been observed interacting. Here we show posterior distributions for each $\lambda$ in each network ranging from the prior distribution ($n=0$ observed co-occurrence) to the distribution obtained when the pair of species has been observed co-occurring 100 times. The distribution narrows and approaches zero as the sample size increases. \textbf{A)} The posterior distributions for the \emph{Salix}-galler component are always wider and farther from zero than those for \textbf{B)} the galler-natural enemy component. This is likely because the prior distribution for the galler-natural enemy component of the network was both narrower and had a mean closer to that in the~\citet{Kopelke2017} data than did the \emph{Salix}-galler component.}
         \label{Salix_pdfs}
         \includegraphics*[width=.8\textwidth]{figures/Salix_Galler_pdfs_increasing_N.eps}
         \end{figure}
@@ -357,28 +357,19 @@ Link\"{o}ping, Sweden\\
 
 \section*{Scaling up uncertainty from pairwise interactions to networks}
 
-    It is fairly straightforward to compute most of network metrics when the different $\lambda$ of the adjacency matrix are known, without variance~\citep{Poisot2016}. Several of these metrics derive directly from quantitative indices of network structure which are equivalent to $\lambda$. The remainder, originally defined for binary networks, can be adjusted to account for interaction probabilities between zero and one. It is not as easy, however, to understand how the uncertainty in these estimated interaction probabilities influences network metrics. Computation of these metrics involves non-linear functions and therefore, because of Jensen's inequality (which states that the average of a non-linear function of a stochastic variable differs from the function of the average of that variable), any uncertainty in $\lambda$s could bias both the mean and variance of a network metric. For instance, assume that among the pairs of species with few observed co-occurrences there are many pairs which truly interact. If we begin with no observed links for these pairs, then correcting for these false absences will inflate the number of links and consequently influence metrics such as connectance, nestedness, and degree distribution. While we can, as described above, calculate these network metrics using fixed estimates for $\lambda$, no analytical solution currently exists for uncertain $\lambda$. Instead we must rely on computer simulations. In the following section, we will provide an empirical example based on an extremely well-sampled \emph{Salix}-galler-natural enemy system (see Box~\ref{box1};~\citealp{Kopelke2017}). We will show how the uncertainty arising from both absences of co-occurrences and false absences of interactions impact these metrics. %We find uncertainty influences both the average and the variance of network metrics, putting in perspective traditional network comparison studies where these metrics are assumed to be fixed entities. 
+    It is fairly straightforward to compute most of network metrics when the different $\lambda$ of the adjacency matrix are known, without variance~\citep{Poisot2016}. Several of these metrics derive directly from quantitative indices of network structure which are equivalent to $\lambda$. The remainder, originally defined for binary networks, can be adjusted to account for interaction probabilities between zero and one. It is not as easy, however, to understand how the uncertainty in these estimated interaction probabilities influences network metrics. Computation of these metrics involves non-linear functions and therefore, because of Jensen's inequality (which states that the average of a non-linear function of a stochastic variable differs from the function of the average of that variable), any uncertainty in $\lambda$s could bias both the mean and variance of a network metric. For instance, assume that among the pairs of species with few observed co-occurrences there are many pairs which truly interact. If we begin with no observed links for these pairs, then correcting for these false absences will inflate the number of links and consequently influence metrics such as connectance, nestedness, and degree distribution. While we can, as described above, calculate these network metrics using fixed estimates for $\lambda$, no analytical solution currently exists for uncertain $\lambda$. Instead we must rely on computer simulations. In the following section, we will provide an empirical example based on an extremely well-sampled \emph{Salix}-galler-natural enemy system (\citealp{Kopelke2017}; see Box~\ref{box1} for a description). We will show how the uncertainty arising from both absences of co-occurrences and false absences of interactions impact these metrics. %We find uncertainty influences both the average and the variance of network metrics, putting in perspective traditional network comparison studies where these metrics are assumed to be fixed entities. 
 
 
 
   \subsection*{Computing the posterior distribution}
 
-      In a strict Bayesian framework, we wish to use a prior distribution that does not rely on any information from the study at hand. To that end, we use data from another well-described \emph{Salix} galler-parasitoid system~\citep{Barbour2016,Barbour2016Dryad}. Note that this study used several genotypes of \emph{S. hookeriana} rather than different \emph{Salix} species. We estimated frequencies of  \emph{S. hookeriana} genotype-galler interactions based on the normalised degree of each species in each network component (see \emph{Appendix S1} for details and code). Specifically, we obtain prior parameters $\alpha$=2.507217 and $\beta$=1.888079. For the galler-parasitoid component of the network, the corresponding prior parameters are $\alpha$=1.341479, $\beta$=9.487966. We are then able to use these priors to estimate the posterior distribution of interaction probabilities given the additional information in our dataset.
+      In a strict Bayesian framework, we wish to use a prior distribution that does not rely on any information from the study at hand. To that end, we use data from another well-described \emph{Salix} galler-natural enemy system~\citep{Barbour2016,Barbour2016Dryad}. Note that this study used several genotypes of \emph{Salix hookeriana} rather than different \emph{Salix} species. We estimated frequencies of  \emph{S. hookeriana} genotype-galler interactions based on the normalised degree of each species in each network component (see \emph{Appendix S1} for details and code). Specifically, we obtain prior parameters $\alpha$=2.51 and $\beta$=1.89. For the galler-natural enemy component of the network, the corresponding prior parameters are $\alpha$=1.34, $\beta$=9.49. We are then able to use these prior parameters to estimate the posterior distribution of interaction probabilities given the additional information in our dataset.
   
-      For species where no co-occurrences were observed, we can 
-      calculate the estimates for the mean and variance of 
-      $\lambda_{ij}$ directly from this prior following 
-      equations~\ref{mean} and~\ref{variance} 
-      (see \emph{Appendix S2} for R implementation). The prior 
-      distribution we obtain based on~\citet{Barbour2016,Barbour2016Dryad} is:
-      $\hat{\lambda_{ij}}$=0.570, var($\lambda$)=0.056 for the \emph{Salix}-galler network and $\hat{\lambda_{ij}}$=0.124, var($\lambda$)=0.010 for the galler-parasitoid network. This is consistent with the prior data, where the average 
-      interaction probability based on the degree distributions of Salix genotypes and gallers was 0.562 and that for gallers and parasitoids was 0.122. These probabilities are much higher than those in our dataset (0.028 and 0.078 for the \emph{Salix}-galler and galler-parasitoid networks, respectively). This discrepancy may reflect the differences in scale between a network containing different genotypes of a single \emph{Salix} species and four gallers from a single family and a network containing many \emph{Salix} species and gallers from many families as is the case in our dataset.
+      For species where no co-occurrences were observed, we can calculate the estimates for the mean and variance of $\lambda_{ij}$ directly from the prior parameters following equations~\ref{mean} and~\ref{variance} (see \emph{Appendix S2} for R implementation). For the \emph{Salix}-galler network, the prior distribution we obtained was: $\bar\lambda$=0.570, var($\lambda$)=0.056. The prior distribution for the galler-natural enemy network was $\bar\lambda$=0.124, var($\lambda$)=0.010. This is consistent with the prior data, where the average interaction probability based on the degree distributions of \emph{Salix} genotypes and gallers was 0.562 and that for gallers and natural enemies was 0.122. These probabilities are much higher than those in our dataset (0.028 and 0.078 for the \emph{Salix}-galler and galler-natural enemy networks, respectively). This discrepancy may reflect the differences in scale between a network containing different genotypes of a single \emph{Salix} species and four gallers from a single family in~\citet{Barbour2016} and a network containing many \emph{Salix} species and gallers from many families as is the case in~\citet{Kopelke2017}.
 
-      For a pair of species where some co-occurrences were observed, we can update the prior distribution with these data. If we consider only pairs of species which were observed to co-occur but not to interact, $k_{ij}$ is always 0 and only $n_{ij}$ will vary between species pairs. Thus $\alpha'$=$\alpha$ and $\beta'$=$\beta + n$. At the most extreme case, for a pair of species which co-occurred at all 374 sites and was never observed to interact, our distributions would become:
-
-
-      $\hat{\lambda_{ij}}$=6.625921 $\times$ 10$^{-3}$, var($\lambda_{ij}$)=1.739456 $\times$ 10$^{-5}$ for the \emph{Salix}-galler network and 
-      $\hat{\lambda_{ij}}$=3.485906 $\times$ 10$^{-3}$, var($\lambda_{ij}$)=9.026737 $\times$ 10$^{-6}$ for the galler-parasitoid network.
+      For a pair of species where some co-occurrences were observed, we can update the prior distribution with these data. If we consider only pairs of species which were observed to co-occur but not to interact, $k_{ij}$ is always 0 and only $n_{ij}$ will vary between species pairs. Thus $\alpha'$=$\alpha$ and $\beta'$=$\beta + n$. At the most extreme case, for a pair of species which co-occurred at all 374 sites and was never observed to interact, our distributions would become
+      $\bar\lambda_{ij}$=6.63 $\times$ 10$^{-3}$, var($\lambda_{ij}$)=1.74 $\times$ 10$^{-5}$ for the \emph{Salix}-galler network and 
+      $\bar\lambda_{ij}$=3.49 $\times$ 10$^{-3}$, var($\lambda_{ij}$)=9.03 $\times$ 10$^{-6}$ for the galler-natural enemy network.
 
       
       With species $i$ and $j$ co-occurring at all 374 sites and never being observed to interact, the maximum likelihood expectation for the probability of an interaction $ij$ is very close to 0 and the variance about this estimate is very narrow. In other words, we could establish with high certainty that the species will never interact. However, for most pairs of species $i$ and $j$, the species did not co-occur at many sites and our posterior mean and variance retain some of the influence of the prior. Nevertheless, as the number of observed co-occurrence increases, the posterior mean becomes closer to zero and the posterior variance decreases (Fig.~\ref{Salix_pdfs}).
@@ -404,7 +395,7 @@ Link\"{o}ping, Sweden\\
         \caption{95\% credible intervals for the interaction probability of two species that co-occur in $N$ sites but are never observed to interact, obtained using prior information from the \emph{Salix}-galler network in~\citet{Barbour2016,Barbour2016Dryad}. [Tomas notes that this is conceptually very similar to Fig.~\ref{Salix_pdfs}]}
         \label{interval_table}
         \begin{tabular}{l | c c | c c }
-        \multirow{2}{*}{N} & \multicolumn{2}{c}{\emph{Salix}-galler} & \multicolumn{2}{c}{galler-parasitoid}\\
+        \multirow{2}{*}{N} & \multicolumn{2}{c}{\emph{Salix}-galler} & \multicolumn{2}{c}{galler-natural enemy}\\
          & Lower bound & Upper bound \\
         \hline
         0   & 0.152 & 0.931 & 0.008 & 0.364 \\
@@ -428,11 +419,11 @@ Link\"{o}ping, Sweden\\
 
   \subsection*{How many samples are required to reach a minimal precision}
 
-      Rather than calculating confidence intervals for a posterior distribution after collecting data, we may wish to know how many data points are necessary to obtain a given level of confidence that two co-occurring species do not interact. The number of samples needed will depend on both our desired level of confidence and the threshold below which we assume that two species are unlikely to ever interact. If we want to be 95\% confident that the interaction probability for two species in the \emph{Salix}-galler network is below 0.5, 0.1, or 0.01, we would need six, 51, and 101 observed co-occurrences with no observed interaction (Fig.~\ref{Salix_cdfs}; see function samples\_required in~\emph{Appendix S2}). Although the prior distribution of interaction probabilities is narrower and closer to zero for the galler-parasitoid network, the number of samples required to be 95\% confident that the interaction probability is below a threshold still increases quickly; we would need 25 and 101 observed co-occurrence with no observed interaction for threshold interaction probabilities of 0.1 and 0.01, respectively. Given the low levels of replication in most network studies, this implies that we should have fairly low confidence in many ``non-interacting" pairs of species. Even in the extensively replicated \emph{Salix}-galler-parasitoid dataset very few species pairs were observed co-occurring frequently enough to reach these thresholds (only three \emph{Salix}-galler pairs and 31 galler-parasitoid pairs were observed co-occurring frequently enough to reach the threshold for an interaction probability of 0.1, and no pairs were observed co-occurring frequently enough to reach the threshold for an interaction probability of 0.01 [[Do we need the other thresholds? Seems like it'll get redundant]]). Discounting potential interactions, then, requires either a stronger prior expectation of no interaction (e.g., we can be highly confident that a palm tree will not predate upon a leopard no matter how many times the two species are observed together) or very extensive sampling.
+      Rather than calculating confidence intervals for a posterior distribution after collecting data, we may wish to know how many data points are necessary to obtain a given level of confidence that two co-occurring species do not interact. The number of samples needed will depend on both our desired level of confidence and the threshold below which we assume that two species are unlikely to ever interact. If we want to be 95\% confident that the interaction probability for two species in the \emph{Salix}-galler network is below 0.5, 0.1, or 0.01, we would need six, 51, and 101 observed co-occurrences with no observed interaction (Fig.~\ref{Salix_cdfs}; see function samples\_required in~\emph{Appendix S2}). Although the prior distribution of interaction probabilities is narrower and closer to zero for the galler-natural enemy network, the number of samples required to be 95\% confident that the interaction probability is below a threshold still increases quickly; we would need 25 and 101 observed co-occurrence with no observed interaction for threshold interaction probabilities of 0.1 and 0.01, respectively. Given the low levels of replication in most network studies, this implies that we should have fairly low confidence in many ``non-interacting" pairs of species. Even in the extensively replicated \emph{Salix}-galler-natural enemy dataset very few species pairs were observed co-occurring frequently enough to reach these thresholds (only three \emph{Salix}-galler pairs and 31 galler-natural enemy pairs were observed co-occurring frequently enough to reach the threshold for an interaction probability of 0.1, and no pairs were observed co-occurring frequently enough to reach the threshold for an interaction probability of 0.01 [[Do we need the other thresholds? Seems like it'll get redundant]]). Discounting potential interactions, then, requires either a stronger prior expectation of no interaction (e.g., we can be highly confident that a palm tree will not predate upon a leopard no matter how many times the two species are observed together) or very extensive sampling.
 
 
       \begin{figure}[ht]
-        \caption{The number of samples required to achieve a given level of confidence that an interaction probability is below a given threshold varies with both parameters. With a low threshold, our confidence that $\omega_{ij}$ is below the threshold increases rapidly with repeated observation of co-occurrence without interaction. Here we show the cumulative density functions for thresholds probabilities of 0.5 (solid line), 0.25 (dashed line), 0.1 (dash-dot line), and 0.05 (dotted line) as well as the points at which the cdf reaches 0.90 (orange square), 0.95 (red circle), and 0.975 (blue diamond) for each threshold value. The large ticks along the x-axis indicate the number of samples associated with each of these points. Note that the number of samples required to reach any given threshold is smaller for \textbf{A)} the \emph{Salix}-galler network than for \textbf{B)} the galler-parasitoid network.}
+        \caption{The number of samples required to achieve a given level of confidence that an interaction probability is below a given threshold varies with both parameters. With a low threshold, our confidence that $\omega_{ij}$ is below the threshold increases rapidly with repeated observation of co-occurrence without interaction. Here we show the cumulative density functions for thresholds probabilities of 0.5 (solid line), 0.25 (dashed line), 0.1 (dash-dot line), and 0.05 (dotted line) as well as the points at which the cdf reaches 0.90 (orange square), 0.95 (red circle), and 0.975 (blue diamond) for each threshold value. The large ticks along the x-axis indicate the number of samples associated with each of these points. Note that the number of samples required to reach any given threshold is smaller for \textbf{A)} the \emph{Salix}-galler network than for \textbf{B)} the galler-natural enemy network.}
         \label{Salix_cdfs}
         \includegraphics[width=.8\textwidth]{figures/Salix_Galler_samples_and_cdfs.eps}
 
@@ -441,7 +432,7 @@ Link\"{o}ping, Sweden\\
 
   \subsection*{Scaling up to network metrics}
 
-    Using the prior distributions and procedures described above, we calculated posterior probability distributions for each pair of \emph{Salix} and galler or galler and parasitoid species that were not observed interacting. Using these posterior distributions and assuming probabilities of 1 for pairs of species that were observed interacting, we created a suite of 100 webs of each network type by randomly sampling from each posterior distribution. After obtaining these posterior networks, we calculated the connectance of each web, as well as the number of links per resource (\emph{Salix} in the \emph{Salix}-galler networks or galler in the galler-parasitoid networks) and links per consumer. To demonstrate how these network metrics will be affected by detection uncertainty ($\delta$), we then created a suite of filtered networks for each posterior network. Networks were filtered by randomly sampling 99\%, 95\%, 90\%, 80\%, 70\&, 60\%, and 50\% of the interactions included in each posterior network. This gradient is akin to a gradient of sampling effort. For each level of detection accuracy, we created 100 randomly-sampled networks per posterior-probability network. We then calculated the same network properties as described above.
+    Using the prior distributions and procedures described above, we calculated posterior probability distributions for \emph{Salix}-galler or galler-natural ememy pair that was not observed interacting. Using these posterior distributions and assuming probabilities of 1 for pairs of species that were observed interacting, we created a suite of 100 webs of each network type by randomly sampling from each posterior distribution. After obtaining these posterior networks, we calculated the connectance of each web, as well as the number of links per resource (\emph{Salix} in the \emph{Salix}-galler networks or galler in the galler-natural enemy networks) and links per consumer. To demonstrate how these network metrics will be affected by detection uncertainty ($\delta$), we then created a suite of filtered networks for each posterior network. Networks were filtered by randomly sampling 99\%, 95\%, 90\%, 80\%, 70\&, 60\%, and 50\% of the interactions included in each posterior network. This gradient is akin to a gradient of sampling effort. For each level of detection accuracy, we created 100 randomly-sampled networks per posterior-probability network. We then calculated the same network properties as described above.
 
 %DG: the different posterior connectance are the results of different samples of the posterior distribution, righ ? 
 %Yes
@@ -449,11 +440,11 @@ Link\"{o}ping, Sweden\\
     We find, not surprisingly, that the posterior webs for the Salix-galler network all had much higher connectance than the original, observed web (C=0.028 for the observed web, Fig.~\ref{posterior_webs}). Likewise, the number of links per \emph{Salix} and galler species in the observed web (2.71 and 1.47, respectively) were much lower than those predicted in the posterior webs, even when filtering with a detection probability of only 50\%. There are two possible explanations for this discrepancy: either the~\citet{Barbour2016} data do not give an appropriate prior for our dataset, or the true detection probability for links between \emph{Salix} and galler species is much less than 50\%. As the scale of the two datasets is quite different (genotypes of a single \emph{Salix} species in~\citet{Barbour2016}, various \emph{Salix} species in our dataset), we suspect the former is more likely.
 
 
-    Considering the galler-parasitoid networks, the connectance, mean links per galler, and mean links per parasitoid (0.078, 9.99, and 7.45, respectively) are similar to those in the posterior webs with a detection filter of 50\% (Fig.~\ref{posterior_webs}). The~\citet{Barbour2016} network likely provides a better prior here than for the \emph{Salix}-galler networks, as both networks included different galler and parasitoid species. Although the two networks differ vastly in scale, and the inclusion of multiple \emph{Salix} species likely causes structural differences from~\citet{Barbour2016} despite the similar resolution of gallers and parasitoids, this result nevertheless suggests that even such a large and well-replicated network is missing a large proportion of interactions. This should be a strong warning to researchers comparing structural characteristics between networks - small structural differences are very likely to be completely masked by structural changes that would result if missing interactions were included.
+    Considering the galler-natural enemy networks, the connectance, mean links per galler, and mean links per natural enemy (0.078, 9.99, and 7.45, respectively) are similar to those in the posterior webs with a detection filter of 50\% (Fig.~\ref{posterior_webs}). The~\citet{Barbour2016} network likely provides a better prior here than for the \emph{Salix}-galler networks, as both networks included different galler and natural enemy species. Although the two networks differ vastly in scale, and the inclusion of multiple \emph{Salix} species likely causes structural differences from~\citet{Barbour2016} despite the similar resolution of gallers and natural enemies, this result nevertheless suggests that even such a large and well-replicated network is missing a large proportion of interactions. This should be a strong warning to researchers comparing structural characteristics between networks - small structural differences are very likely to be completely masked by structural changes that would result if missing interactions were included.
 
 
     \begin{figure}[ht]
-    \caption{Here we show the mean connectance, links per resource (\emph{Salix} in the \emph{Salix}-galler networks and gallers in the galler-parasitoid networks), and links per consumer (gallers in the \emph{Salix}-galler networks and parasitoids in the galler-parasitoid networks) for networks assembled using posterior distributions based on~\citet{Barbour2016,Barbour2016Dryad}. We created 100 ``posterior-sampling" networks and then, for each of these, created 100 ``detection-filter" networks by randomly sampling 50\%-99\% of the interactions included in the posterior-sampling network. This simulates imperfect detection of interactions in the field. Each point represents the mean network property (e.g., connectance) obtained from a set of 100 detection-filter networks, plotted against the value of the network property in the posterior-sampling network used to create the detection-filter networks. For each property and both network types, the posterior-sampling networks cover a relatively small range of network properties and the value of each property decreases with the proportion of links included in the detection-filter networks.}
+    \caption{Here we show the mean connectance, links per resource (\emph{Salix} in the \emph{Salix}-galler networks and gallers in the galler-natural enemy networks), and links per consumer (gallers in the \emph{Salix}-galler networks and natural enemies in the galler-natural enemy networks) for networks assembled using posterior distributions based on~\citet{Barbour2016,Barbour2016Dryad}. We created 100 ``posterior-sampling" networks and then, for each of these, created 100 ``detection-filter" networks by randomly sampling 50\%-99\% of the interactions included in the posterior-sampling network. This simulates imperfect detection of interactions in the field. Each point represents the mean network property (e.g., connectance) obtained from a set of 100 detection-filter networks, plotted against the value of the network property in the posterior-sampling network used to create the detection-filter networks. For each property and both network types, the posterior-sampling networks cover a relatively small range of network properties and the value of each property decreases with the proportion of links included in the detection-filter networks.}
     \label{posterior_webs}    
     \includegraphics[width=.8\textwidth]{Figures/Salix_Galler_posterior_properties.eps}
     \end{figure}
