--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -81,6 +81,7 @@ Link\"{o}ping, Sweden\\
 \begin{floatbox}{}
 % DG : I wonder if a paragraph summarizing the extent of the problem with the salix data should not be provided here. Either within the text, or a box. But we need to convingly show how large is this problem even for such an extensive dataset
 % AC : I like the box idea. Since we refer to the Salix data throughout the manuscript it makes sense to make it stand out. 
+[[I had understood that each of the 374 sites was a sample - should we switch to 641 as the maximum sites?]]
     \indent As a case study, we use an extensively sampled \emph{Salix}-galler-natural enemy meta-network. This dataset consists of a single community type sampled across Europe; willow (\emph{Salix}) species, willow-galling sawflies, and their natural enemies. The data were collected over 29 years at 374 unique locations across Europe, with a total of 641 site visits. Each site visit can be considered as a network in its own right and an independent sample from which to build the meta-network. The meta-network consists of 1,173 different interactions between 52 \emph{Salix} nodes, 92 herbivore nodes, and 126 natural enemy nodes. The high spatiotemporal resolution of this network and the unusually high sampling effort implemented at the site level makes this dataset particularly well suited for illustrating the difficulties in completely sampling a network and testing Bayesian approaches to overcome these difficulties.
     \indent We may begin by comparing the frequency of of co-occurence of taxa to reveal the challenge of having sufficient sampling to be confident that an interaction does not occur. Most pairs of species (3986/4992 \emph{Salix}-galler pairs and  9794/12096 galler-natural enemy pairs) are never found co-occurring, and for species that did occur the number of co-occurrences was generally low (mean=4.24, var=36.3 for \emph{Salix}-galler pairs; mean=3.87, var=28.8 for galler-natural enemy pairs; Fig.~\ref{histograms}A-B). For those species which interacted when co-occurring, the incidence of interaction was also low (mean=12.0, var=155 for \emph{Salix}-galler pairs; mean=4.04, var=29.3 for galler-natural enemy pairs; Fig.~\ref{histograms}C-D). Only 2.82\% of \emph{Salix}-galler pairs and 7.76\% of galler-natural enemy pairs were observed interacting at all. Thus, even in the most extensive data set that we could find, limited sampling is clearly a major source of uncertainty. This dataset also illustrates the potential for increased sampling to not necessarily reveal more interactions as a pair of species that interacts in some cases may not be observed interacting in all cases (Fig.~\ref{histograms}E-F). 
   \caption{\emph{Salix} dataset}
@@ -372,54 +373,55 @@ Link\"{o}ping, Sweden\\
       $\bar\lambda_{ij}$=3.49 $\times$ 10$^{-3}$, var($\lambda_{ij}$)=9.03 $\times$ 10$^{-6}$ for the galler-natural enemy network.
 
       
-      With species $i$ and $j$ co-occurring at all 374 sites and never being observed to interact, the maximum likelihood expectation for the probability of an interaction $ij$ is very close to 0 and the variance about this estimate is very narrow. In other words, we could establish with high certainty that the species will never interact. However, for most pairs of species $i$ and $j$, the species did not co-occur at many sites and our posterior mean and variance retain some of the influence of the prior. Nevertheless, as the number of observed co-occurrence increases, the posterior mean becomes closer to zero and the posterior variance decreases (Fig.~\ref{Salix_pdfs}).
+      With species $i$ and $j$ co-occurring at all 374 sites and never being observed to interact, the maximum likelihood expectation for the probability of an interaction $ij$ is very close to 0 and the variance about this estimate is very narrow. In other words, we could establish with high certainty that the species will never interact. However, for most pairs of species $i$ and $j$, the species did not co-occur at many sites and our posterior mean and variance retain some of the influence of the prior. Nevertheless, as the number of observed co-occurrence increases, the posterior mean becomes closer to zero and the posterior variance decreases (Fig.~\ref{Salix_pdfs}).  The 95\% credible interval around the estimate of $\lambda$ also shrinks with increasing sample sizes, from (0.152,0.931) and (0.008, 0.364) for \emph{Salix}-galler and galler-natural enemy pairs that were never observed co-occurring to (0.001, 0.017) and (\textless0.001, 0.11) for hypothetical \emph{Salix}-galler and galler-natural enemy pairs that might be observed co-occurring at all 374 sites without any observed interaction.
 
-%DG: the following subsection could be moved to the appendix if we need to cut down
+% %DG: the following subsection could be moved to the appendix if we need to cut down
+% Add to appendix. 
 
-  \subsection*{Computing the credible interval around a probability estimate}
+%   \subsection*{Computing the credible interval around a probability estimate}
 
-      As well as obtaining posterior means and variances, it is possible to calculate a 95\% credible interval about the posterior mean. This is again straightforward to do in R (see the function ``credible interval" in \emph{Appendix S2}). Calculating the 95\% credible intervals for species pairs with 0 to 50 observed co-occurrences without any observed interaction (as in Fig.~\ref{Salix_pdfs}), we see that the interval narrows dramatically as the number of observations increases. In no case, however, does the confidence interval include 0. Even for a pair of species which appeared together in all 374 sites but were never observed interacting, the confidence interval (0.001, 0.018) comes close to, but does not include zero (Table~\ref{interval_table}). In other words, even with a very large data set, we will have problems in establishing that a given species pair can never interact.
+%       As well as obtaining posterior means and variances, it is possible to calculate a 95\% credible interval about the posterior mean. This is again straightforward to do in R (see the function ``credible\_interval" in \emph{Appendix S2}). Calculating the 95\% credible intervals for species pairs with 0 to 50 observed co-occurrences without any observed interaction (as in Fig.~\ref{Salix_pdfs}), we see that the interval narrows dramatically as the number of observations increases. In no case, however, does the confidence interval include 0. Even for a pair of species which appeared together in all 374 sites but were never observed interacting, the confidence interval (0.001, 0.018) comes close to, but does not include zero (Table~\ref{interval_table}). In other words, even with a very large data set, we will have problems in establishing that a given species pair can never interact.
 
-      % # R code to make the table:
-      % output=matrix(nrow=length(ns),ncol=5)
-      % ns=c(0,1,2,5,10,15,20,25,50,100,150,200,374)
-      % output[,1]=ns
-      % for(r in 1:nrow(output)){
-      %   interval1=credible_interval(calculate_parameters(sg_int_probs,ns[r],0),0.025,0.975)    
-      %   interval2=credible_interval(calculate_parameters(gp_int_probs,ns[r],0),0.025,0.975)    
-      %   output[r,2:3]=interval1
-      %   output[r,4:5]=interval2
-      % }
+%       % # R code to make the table:
+%       % output=matrix(nrow=length(ns),ncol=5)
+%       % ns=c(0,1,2,5,10,15,20,25,50,100,150,200,374)
+%       % output[,1]=ns
+%       % for(r in 1:nrow(output)){
+%       %   interval1=credible_interval(calculate_parameters(sg_int_probs,ns[r],0),0.025,0.975)    
+%       %   interval2=credible_interval(calculate_parameters(gp_int_probs,ns[r],0),0.025,0.975)    
+%       %   output[r,2:3]=interval1
+%       %   output[r,4:5]=interval2
+%       % }
 
-      \begin{table}[h]
-        \caption{95\% credible intervals for the interaction probability of two species that co-occur in $N$ sites but are never observed to interact, obtained using prior information from the \emph{Salix}-galler network in~\citet{Barbour2016,Barbour2016Dryad}. [Tomas notes that this is conceptually very similar to Fig.~\ref{Salix_pdfs}]}
-        \label{interval_table}
-        \begin{tabular}{l | c c | c c }
-        \multirow{2}{*}{N} & \multicolumn{2}{c}{\emph{Salix}-galler} & \multicolumn{2}{c}{galler-natural enemy}\\
-         & Lower bound & Upper bound \\
-        \hline
-        0   & 0.152 & 0.931 & 0.008 & 0.364 \\
-        1   & 0.110 & 0.843 & 0.007 & 0.337 \\
-        2   & 0.087 & 0.760 & 0.006 & 0.313 \\
-        5   & 0.053 & 0.573 & 0.005 & 0.258 \\
-        10  & 0.033 & 0.400 & 0.004 & 0.200 \\
-        15  & 0.023 & 0.306 & 0.003 & 0.163 \\
-        20  & 0.018 & 0.247 & 0.003 & 0.137 \\
-        25  & 0.015 & 0.208 & 0.002 & 0.119 \\
-        50  & 0.008 & 0.115 & 0.001 & 0.071 \\
-        100 & 0.004 & 0.061 & 0.001 & 0.039 \\
-        150 & 0.003 & 0.041 & \textless0.001 & 0.027 \\
-        200 & 0.002 & 0.031 & \textless0.001 & 0.021 \\
-        \hline
-        374 & 0.001 & 0.017 & \textless0.001 & 0.011 \\
-        \hline
-        \end{tabular}
-        \end{table}
+%       \begin{table}[h]
+%         \caption{95\% credible intervals for the interaction probability of two species that co-occur in $N$ sites but are never observed to interact, obtained using prior information from the \emph{Salix}-galler network in~\citet{Barbour2016,Barbour2016Dryad}. [Tomas notes that this is conceptually very similar to Fig.~\ref{Salix_pdfs}]}
+%         \label{interval_table}
+%         \begin{tabular}{l | c c | c c }
+%         \multirow{2}{*}{N} & \multicolumn{2}{c}{\emph{Salix}-galler} & \multicolumn{2}{c}{galler-natural enemy}\\
+%          & Lower bound & Upper bound \\
+%         \hline
+%         0   & 0.152 & 0.931 & 0.008 & 0.364 \\
+%         1   & 0.110 & 0.843 & 0.007 & 0.337 \\
+%         2   & 0.087 & 0.760 & 0.006 & 0.313 \\
+%         5   & 0.053 & 0.573 & 0.005 & 0.258 \\
+%         10  & 0.033 & 0.400 & 0.004 & 0.200 \\
+%         15  & 0.023 & 0.306 & 0.003 & 0.163 \\
+%         20  & 0.018 & 0.247 & 0.003 & 0.137 \\
+%         25  & 0.015 & 0.208 & 0.002 & 0.119 \\
+%         50  & 0.008 & 0.115 & 0.001 & 0.071 \\
+%         100 & 0.004 & 0.061 & 0.001 & 0.039 \\
+%         150 & 0.003 & 0.041 & \textless0.001 & 0.027 \\
+%         200 & 0.002 & 0.031 & \textless0.001 & 0.021 \\
+%         \hline
+%         374 & 0.001 & 0.017 & \textless0.001 & 0.011 \\
+%         \hline
+%         \end{tabular}
+%         \end{table}
 
 
   \subsection*{How many samples are required to reach a minimal precision}
 
-      Rather than calculating confidence intervals for a posterior distribution after collecting data, we may wish to know how many data points are necessary to obtain a given level of confidence that two co-occurring species do not interact. The number of samples needed will depend on both our desired level of confidence and the threshold below which we assume that two species are unlikely to ever interact. If we want to be 95\% confident that the interaction probability for two species in the \emph{Salix}-galler network is below 0.5, 0.1, or 0.01, we would need six, 51, and 101 observed co-occurrences with no observed interaction (Fig.~\ref{Salix_cdfs}; see function samples\_required in~\emph{Appendix S2}). Although the prior distribution of interaction probabilities is narrower and closer to zero for the galler-natural enemy network, the number of samples required to be 95\% confident that the interaction probability is below a threshold still increases quickly; we would need 25 and 101 observed co-occurrence with no observed interaction for threshold interaction probabilities of 0.1 and 0.01, respectively. Given the low levels of replication in most network studies, this implies that we should have fairly low confidence in many ``non-interacting" pairs of species. Even in the extensively replicated \emph{Salix}-galler-natural enemy dataset very few species pairs were observed co-occurring frequently enough to reach these thresholds (only three \emph{Salix}-galler pairs and 31 galler-natural enemy pairs were observed co-occurring frequently enough to reach the threshold for an interaction probability of 0.1, and no pairs were observed co-occurring frequently enough to reach the threshold for an interaction probability of 0.01 [[Do we need the other thresholds? Seems like it'll get redundant]]). Discounting potential interactions, then, requires either a stronger prior expectation of no interaction (e.g., we can be highly confident that a palm tree will not predate upon a leopard no matter how many times the two species are observed together) or very extensive sampling.
+      Rather than calculating confidence intervals for a posterior distribution after collecting data, we may wish to know how many data points are necessary to obtain a given level of confidence that two co-occurring species do not interact. The number of samples needed will depend on both our desired level of confidence and the threshold below which we assume that two species are unlikely to ever interact. If we want to be 95\% confident that the interaction probability for two species in the \emph{Salix}-galler network is below 0.1, 0.05, or 0.01, we would need 51, 106, and 550 observed co-occurrences with no observed interaction (Fig.~\ref{Salix_cdfs}; see function plot\_precision in~\emph{Appendix S2}). Although the prior distribution of interaction probabilities is narrower and closer to zero for the galler-natural enemy network, the number of samples required to be 95\% confident that the interaction probability is below a threshold still increases quickly; we would need 25, 62, and 352 observed co-occurrence with no observed interaction for threshold interaction probabilities of 0.1, 0.05, and 0.01, respectively. Given the low levels of replication in most network studies, this implies that we should have fairly low confidence in many ``non-interacting" pairs of species. Even in the extensively replicated \emph{Salix}-galler-natural enemy dataset very few species pairs were observed co-occurring frequently enough to reach these thresholds (only three \emph{Salix}-galler pairs and 31 galler-natural enemy pairs were observed co-occurring frequently enough to reach the threshold for an interaction probability of 0.1, and no pairs were observed co-occurring frequently enough to reach the threshold for an interaction probability of 0.01). Discounting potential interactions, then, requires either a stronger prior expectation of no interaction (e.g., we can be highly confident that a palm tree will not predate upon a leopard no matter how many times the two species are observed together) or very extensive sampling.
 
 
       \begin{figure}[ht]
